# commit-ai

./: Cargo.toml  README.md
src/: cli.rs  commit.rs  git.rs  git_changes.rs  main.rs  openai.rs
