[package]
name = "commit-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
